--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,8 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Noto Sans", serif;
+  font-weight: 600;
   line-height: 1.5;
 }
 
@@ -23,7 +24,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: normal;
+  font-weight: 700;
+  margin: 0;
 }
 
 ol,
@@ -47,4 +49,18 @@ textarea {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+}
+
+/* reset for bootstrap */
+button:focus-visible,
+input:focus-visible,
+select:focus-visible,
+textarea:focus-visible,
+
+button:focus,
+input:focus,
+select:focus,
+textarea:focus {
+  outline: none !important;
+  box-shadow: none !important;
 }
