--- a/src/pages/login/style.css
+++ b/src/pages/login/style.css
@@ -38,9 +38,14 @@ body {
     z-index: -1;
 }
 .login_bg::before {
-    height: 56%;
+    height: 54%;
     top: 0;
     background-color: var(--lightGreen);
+}
+@media only screen and (min-width: 756px) {
+    .login_bg::before {
+        height: 51%;
+    }
 }
 .login_bg::after {
     height: 44%;
@@ -96,14 +101,14 @@ label {
     content: '';
     position: absolute;
     inset: 0;
-    transform: rotateX(38deg) scale(1.25) translateY(-12%);
+    transform: rotateX(45deg) scaleX(1.4) scaleY(0.92) translateY(-41%);
     border-radius: 50%;
     background-color: white;
     z-index: -1;
 }
 @media only screen and (min-width: 576px) {
     .bg_form::before {
-        transform: rotateX(38deg) scale(1.3) translateY(-17%);
+        transform: rotateX(38deg) scaleX(1.3) scaleY(1.05) translateY(-32%);
     }
 }
 /* form style ends */
