--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* slick-carousel styles */
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
 :root {
   /* color variables*/
   --lightGreen: #E7FFF3;
@@ -119,6 +122,8 @@ body {
 /* color styles */
 .border_black { border: 1px solid var(--black); }
 .border_green { border: 1px solid var(--green); }
+.text_white { color: var(--lightGreen); }
+.bg_white { background-color: var(--lightGreen); }
 .text_black { color: var(--black); }
 .text_green { color: var(--green); }
 .bg_green { background-color: var(--green); }
@@ -143,7 +148,20 @@ body {
 }
 /* others */
 .flex_center {
-  display: flex;
+  display: flex !important;
   align-items: center;
   justify-content: center;
 }
+.placeholder_black::placeholder {
+  color: var(--black);
+}
+.shadow_text {
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+}
+/* customizing slick */
+.slick-track {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+}
+.slick-slider { overflow: hidden; }
