--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -15,6 +15,7 @@
     background: -webkit-linear-gradient
         (0deg,  hsla(150, 100%, 95%, 0.1) 0%, 
         hsla(151, 100%, 37%, 0.1) 100%);
+    transform: translateY(-7%);
 }
 .header_bg::before {
     right: 75%;
